--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,6 @@ html{
   font-size: 18px;
 }
 body{
-  background: black;
   color: white;
   font-family: Helvetica;
 }
@@ -10,14 +9,15 @@ body{
   max-width: 960px;
   margin: 0 auto;
 }
+.header{
+  background-color: black;
+}
 .header .container {
  display: flex;
- justify-content: flex-start;
  align-items: center;
  height: 2.32rem;
- width: 100%;
- margin-top: 0.66rem;
- margin-bottom:0.66rem;
+ padding-top: 0.66rem;
+ padding-bottom:0.66rem;
 }
 .logo img{
   height: 1.5rem;
@@ -65,28 +65,27 @@ nav {
 }
 .shop {
   display:flex;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  background-color: white;
-  width: 960px;
+  margin-top: 3rem;
   justify-content: space-between;
 }
-.pen,
-.watch,
-.glasses{
-  width: 30%;
-}
+
 .productimg {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 4px solid black;
   height: 9rem;
-  padding: 2rem, 0;
+  padding: 2rem 0;
+  border: 4px solid black;
 }
-.productinfo {
+.product{
+ width: 30%;
+}
+.productimg img{
+  max-width: 8rem;
+}
+.shop p {
+  display: block;
   background-color: black;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-
+  padding: 0.5rem;
+  text-align: center;
 }
